# kick-rs

./: .gitignore  Cargo.toml  LIBRARY_ISSUES.md  README.md  WHY.txt  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
chrono/: enum.Weekday.html  trait.Datelike.html  trait.Timelike.html
codegenta/: index.html
data/: sample-config.toml  sample.ksr  tables.sql
kickstarter/: enum.Error.html  index.html  sidebar-items.js  struct.Client.html  type.Result.html
mysql/: index.html
postgres/: enum.ConnectTarget.html  enum.IsolationLevel.html  enum.SslMode.html  fn.cancel_query.html  macro.accepts!.html  macro.to_sql_checked!.html  struct.CancelData.html  struct.ConnectParams.html  struct.Connection.html  struct.LoggingNoticeHandler.html  struct.Transaction.html  struct.UserInfo.html  trait.GenericConnection.html  trait.HandleNotice.html  trait.IntoConnectParams.html  type.Result.html
r2d2/: index.html  struct.Config.html  struct.GetTimeout.html  struct.InitializationError.html  struct.LoggingErrorHandler.html  struct.NopConnectionCustomizer.html  struct.NopErrorHandler.html  struct.Pool.html  struct.PooledConnection.html  trait.CustomizeConnection.html  trait.HandleError.html  trait.ManageConnection.html
r2d2_postgres/: enum.Error.html  struct.PostgresConnectionManager.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  (+2 more)
(+583 files in other folders)
