[package]
authors = ["Kevin Yeh <kevinyeah@utexas.edu>"]
description = "The real Kickstarter application."
name = "kickstarter"
repository = "https://github.com/kyeah/kick-rs"
version = "0.1.0"

[dependencies]
chrono = "0.4"
diesel = { version = "0.16.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
docopt = "0.8"
lazy_static = "0.1"
postgres = "0.10"
regex = "0.2"
rustc-serialize = "0.3"
toml = "0.1"
